Add desktop style

--- a/restaurant.html
+++ b/restaurant.html
@@ -37,7 +37,7 @@
       <div id="map"></div>
     </section>
     <!-- End map -->
-    <div>
+    <div id="inner-container">
       <!-- Beginning restaurant -->
       <section id="restaurant-container">
         <h1 id="restaurant-name"></h1>
